fix dependency bug

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -39,3 +39,8 @@
 .nav-buttons > li:last-child {
   border-right: 1px solid #ccc;
 }
+
+.nav-buttons li:hover,
+.nav-logo:hover {
+  background: rgb(245, 245, 245);
+}
