fix flexbox navbar centering

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -5,11 +5,10 @@
 
 .navbar {
   border-bottom: 1px solid #ccc;
-  height: 63px;
+  /*height: 63px;*/
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
-
+  align-items: center;
 }
 
 
@@ -34,12 +33,8 @@
 
 .nav-buttons li {
   padding: 10px 20px;
-  border-left: 1px solid #ccc;
-  font-size: 15px;
-}
-
-.nav-buttons > li:last-child {
   border-right: 1px solid #ccc;
+  font-size: 15px;
 }
 
 .nav-buttons li:hover,
