--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -13,7 +13,7 @@
   top: 0;
   width: 100%;
   background: white;
-  z-index: 1000;
+  /*z-index: 1;*/
 }
 
 .nav-logo {
@@ -142,7 +142,7 @@
 }
 
 .form-input:focus {
-  box-shadow: 0 0 5px lightblue;
+  box-shadow: 0px 0px 13px rgb(71, 152, 198);
 }
 
 .form-errors {
