--- a/app/assets/stylesheets/search_results.css
+++ b/app/assets/stylesheets/search_results.css
@@ -1,3 +1,25 @@
 .search-results-page {
-  padding-top: 65px;
+  position: fixed;
+  top: 65px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.index-half {
+  width: 60%;
+}
+
+.map-half {
+  width: 40%;
+}
+
+#map-container {
+  width: 100%;
+  height: 100%;
+}
+
+.app-div {
+  overflow: hidden;
 }
