add/remove markers

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -55,16 +55,22 @@
 .profile-dropdown {
   display: none;
   list-style: none;
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: -63px;
-  border: 1px solid #000;
+  border: 1px solid #eee;
+  z-index: 100;
+}
+
+.dropdown-logout:hover .nav-logout {
+  margin-left: 30px;
 
 }
 
 .nav-user-info {
   position: relative;
   display: block;
+  z-index: 1000;
 }
 
 .nav-user-info:hover .profile-dropdown {
@@ -75,10 +81,12 @@
   width: 285px;
   height: 60px;
   display: flex;
+  background: white;
 }
 
 .nav-logout {
   margin-left: 25px;
+  transition: margin-left 0.5s;
 }
 
 .nav-create-host {
