--- a/app/assets/stylesheets/search_results.css
+++ b/app/assets/stylesheets/search_results.css
@@ -5,20 +5,42 @@
   width: 100%;
   height: calc(100% - 65px);
   display: flex;
-  z-index: 1;
+  z-index: -1;
 }
 
 .index-half {
+  box-sizing: border-box;
   width: 60%;
+  padding: 0 100px 15px 20px;
 }
 
 .map-half {
   width: 40%;
   position: relative;
-  z-index: -1;
 }
 
 #map-container {
   width: 100%;
   height: 100%;
+}
+
+.filter-form {
+  font-size: 12px;
+}
+
+.filter-form p {
+  width: 15%;
+}
+
+.form-slider {
+  margin: 40px;
+  width: 85%;
+}
+
+.price-slider {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
 }
