--- a/app/assets/stylesheets/search_results.css
+++ b/app/assets/stylesheets/search_results.css
@@ -25,7 +25,7 @@
 }
 
 .filter-form {
-  font-size: 12px;
+  font-size: 13px;
 }
 
 .filter-form p {
@@ -43,4 +43,16 @@
   width: 100%;
   border-bottom: 1px solid #ccc;
   margin-bottom: 20px;
+}
+
+.max-price {
+  position: absolute;
+  right: -5px;
+  top: 20px;
+}
+
+.min-price {
+  position: absolute;
+  left: 10px;
+  top: 20px;
 }
