--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>AirCLD</title>
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyB87hXSUGIIgFrtGd1NawaqEbSHmpB9PxA" %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ENV["google_maps_key"]}&libraries=places" %>
     <%= csrf_meta_tags %>
     <script src="https://use.fontawesome.com/73169db8cb.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
