--- a/app/assets/stylesheets/search_results.css
+++ b/app/assets/stylesheets/search_results.css
@@ -49,7 +49,12 @@
   margin: 25px;
   display: flex;
   justify-content: space-around;
+}
 
+.check-icon {
+  font-size: 15px;
+  color: rgb(73, 73, 73);
+  margin-right: 5px;
 }
 
 .checkbox {
@@ -57,6 +62,10 @@
   background: rgb(237, 239, 237);
   border: 1px solid rgb(220, 224, 224);
   padding: 10px 7px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: rgb(73, 73, 73);
 }
 
 .form-slider {
