fix changing index item height bug

--- a/app/assets/stylesheets/search_results.css
+++ b/app/assets/stylesheets/search_results.css
@@ -54,7 +54,7 @@
 .check-icon {
   font-size: 15px;
   color: rgb(73, 73, 73);
-  margin-right: 5px;
+  margin-right: 5px;x
 }
 
 .checkbox {
@@ -96,12 +96,15 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: flex-start;
+  height: 45%;
+  width: 100%;
 
 }
 
 .spot-index-item {
   width: 49%;
   padding-bottom: 20px;
+  height: 100%;
 }
 
 .image-item-div {
