--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AirCLD</title>
+    <title>beachbnb</title>
     <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ENV["google_maps_key"]}&libraries=places" %>
     <%= csrf_meta_tags %>
     <script src="https://use.fontawesome.com/73169db8cb.js"></script>
