--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,14 +1,10 @@
-#root {
-  height: 100%;
-}
-
 .home-page {
   background-image: asset-url("modern2.jpg");
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background-color: rgb(12, 14, 13);
   margin-top: 65px;
@@ -16,17 +12,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 
 .app-div {
-  height: 100vh;
-  overflow: auto;
+
 }
 
 .heading-box {
   width: 60%;
-  height: 100%;
+  height: 40%;
   max-width: 1080px;
   display: flex;
   flex-direction: column;
@@ -74,12 +68,14 @@
 
 .explore-box {
   width: 100%;
+  height: 100%;
   margin: 10px;
 }
 
 .card {
   background-size: cover;
   position: relative;
+
 }
 
 .card p {
@@ -149,6 +145,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+  margin-bottom: 10px;
 }
 
 .hawaii {
