--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,7 +4,6 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  height: calc(100vh - 65px);
   width: 100%;
   background-color: rgb(12, 14, 13);
   margin-top: 65px;
@@ -22,7 +21,7 @@
   flex-direction: column;
   justify-content: center;
   color: white;
-  margin: 165px auto 130px auto;
+  margin: 85px auto;
 }
 
 .main-heading {
@@ -66,7 +65,7 @@
 
 .explore-box {
   width: 100%;
-  height: 100%;
+  height: 310px;
   margin: 10px;
 }
 
