--- a/app/assets/stylesheets/spot_detail.css
+++ b/app/assets/stylesheets/spot_detail.css
@@ -3,6 +3,7 @@
   height: calc(100vh - 65px);
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .spot-picture {
@@ -12,14 +13,16 @@
 }
 
 .spot-detail-body {
-  min-width: 1030px;
-  margin: 0 auto;
-  padding-top: 20px;
+  width: 100%;
+  padding: 20px 0 30px 0;
+  border-bottom: 1px solid #ccc;
 }
 
 .spot-detail-head {
   display: flex;
   flex-direction: row;
+  width: 1030px;
+  margin: 0 auto;
 }
 
 .spot-host-info {
