--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -56,7 +56,6 @@
 
 .nav-buttons > li:hover {
   background: rgb(245, 245, 245);
-
 }
 
 .nav-logo:hover {
@@ -85,6 +84,7 @@
   z-index: 1000;
 }
 
+
 .nav-user-info:hover .profile-dropdown {
   display: block;
 }
@@ -96,6 +96,52 @@
   background: white;
 }
 
+.nav-trips {
+  position: relative;
+  display: block;
+  z-index: 10000;
+}
+
+.nav-trips:hover .trips-dropdown {
+  display: block;
+}
+
+.trips-dropdown {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 65px;
+  border: 1px solid #eee;
+  z-index: 1000;
+}
+
+.trips-dropdown li {
+  width: 300px;
+  height: 85px;
+  background: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+}
+
+.trips-dropdown li:last-child {
+  border-bottom: none;
+}
+
+.booking-dropdown-image {
+  height: 60px;
+  width: 60px;
+}
+
+.booking-city {
+  font-weight: bold;
+}
+
+.booking-dates {
+  font-size: 12px;
+}
 .nav-logout {
   margin-left: 25px;
   transition: margin-left 0.5s;
