--- a/app/assets/stylesheets/search_results.css
+++ b/app/assets/stylesheets/search_results.css
@@ -106,6 +106,10 @@
   height: 100%;
 }
 
+.spot-index-item:hover {
+  cursor: pointer;
+}
+
 .image-item-div {
   width: 100%;
   height: 80%;
@@ -133,6 +137,10 @@
   padding-top: 15px;
   padding-left: 10px;
   color: rgb(72, 72, 72);
+}
+
+.spot-name:hover {
+  text-decoration: underline;
 }
 
 .spot-type-guests {
