--- a/app/assets/stylesheets/spot_detail.css
+++ b/app/assets/stylesheets/spot_detail.css
@@ -1,6 +1,6 @@
 .spot-detail-page {
   margin-top: 65px;
-  height: calc(100vh - 65px);
+  /*height: calc(100vh - 65px);*/
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,7 +9,7 @@
 .spot-picture {
   display: block;
   width: 100%;
-  height: 76%;
+  height: 600px;
 }
 
 .spot-detail-body {
@@ -131,4 +131,48 @@
 
 .DateRangePicker__picker--direction-left {
   left: -146px;
+}
+
+.spot-detail-description {
+  width: 1030px;
+  margin: 30px auto;
+  border-top: 1px solid #ccc;
+}
+
+.spot-description-header {
+  width: 60%;
+  border-bottom: 1px solid #ccc;
+  padding: 30px 40px;
+}
+
+.spot-description-header h3 {
+  color: rgb(72, 72, 72);
+  font-size: 15px;
+  margin: 0 0 16px 0;
+}
+
+.spot-description-header p {
+  color: rgb(76, 76, 76);
+  font-size: 13px;
+}
+
+.spot-section-header {
+  width: 60%;
+  border-bottom: 1px solid #ccc;
+  padding: 30px 40px;
+}
+
+.spot-section-header ul {
+  list-style: none;
+}
+
+.spot-section-header h3 {
+  color: rgb(72, 72, 72);
+  font-size: 15px;
+  margin: 0 0 16px 0
+}
+
+.spot-section-header li {
+  color: rgb(76, 76, 76);
+  font-size: 13px;
 }
