--- a/app/assets/stylesheets/booking_detail.css
+++ b/app/assets/stylesheets/booking_detail.css
@@ -33,10 +33,14 @@
   border-bottom: 1px solid #ccc;
 }
 
+.check-details p {
+  margin-left: 68px;
+}
+
 .check-in, .check-out {
   display: flex;
-  justify-content: space-between;
-  width: 40%;
+  justify-content: flex-start;
+  width: 48%;
 }
 
 .address {
