--- a/app/assets/stylesheets/spot_detail.css
+++ b/app/assets/stylesheets/spot_detail.css
@@ -10,6 +10,7 @@
   display: block;
   width: 100%;
   height: 600px;
+  z-index: -10;
 }
 
 .spot-detail-body {
@@ -36,11 +37,14 @@
 }
 
 .booking-box {
-  width: 32%;
+  width: 325px;
   margin-top: -52px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  right: 10%;
+  background: white;
 }
 
 .spot-detail-name {
@@ -158,8 +162,8 @@
 
 .spot-section-header {
   width: 60%;
-  border-bottom: 1px solid #ccc;
-  padding: 30px 40px;
+
+  padding: 30px 40px 20px 40px;
 }
 
 .spot-section-header ul {
