--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -3,5 +3,5 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-  font-family: Montserrat, sans-serif;
+  font-family: Lato, sans-serif;
 }
