--- a/app/assets/stylesheets/host_form.css.scss
+++ b/app/assets/stylesheets/host_form.css.scss
@@ -3,6 +3,9 @@
   width: 66%;
   margin: 65px auto 0px auto;
   padding-top: 60px;
+  display: flex;
+  justify-content: space-between;
+
 }
 
 .host-form-half {
@@ -26,12 +29,16 @@
 
 .form-search {
   width: 75%;
+  margin-top: 10px;
   padding: 5px;
+  margin-bottom: 10px;
 }
 
 .form-dropdown {
   background: transparent;
   width: 50%;
+  height: 40px;
+  font-size: 18px;
 }
 
 .welcome-submit {
@@ -40,4 +47,26 @@
   padding: 10px 22px;
   border: 1px solid rgb(0, 166, 153);
   border-radius: 3px;
+}
+
+.step-subheading {
+  margin: 30px 0 10px 0;
+  font-size: 14px;
+  color: #bbb;
+}
+
+.kind-subheading {
+  font-size: 22px;
+  color: #484848;
+  margin-bottom: 20px;
+}
+
+.host-form-image {
+  background-image: asset-url("hostform.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: block;
+  height: 500px;
+  width: 400px;
 }
