--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,5 +1,5 @@
 .home-page {
-  background-image: asset-url("beachbg.jpg");
+  background-image: asset-url("beachbg2.jpg");
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
