--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -17,7 +17,7 @@
 }
 
 .nav-logo {
-  background-image: asset-url("logo.jpg");
+  background-image: asset-url("logo2.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
