add cursors to host form submit buttons

--- a/app/assets/stylesheets/host_form.css.scss
+++ b/app/assets/stylesheets/host_form.css.scss
@@ -49,6 +49,10 @@
   border-radius: 3px;
 }
 
+.welcome-submit:hover {
+  cursor: pointer;
+}
+
 .step-subheading {
   margin: 30px 0 10px 0;
   font-size: 14px;
