--- a/app/assets/stylesheets/location_form.css.scss
+++ b/app/assets/stylesheets/location_form.css.scss
@@ -39,6 +39,10 @@
   margin-top: 10px;
 }
 
+.location-submit:hover {
+  cursor: pointer;
+}
+
 .location-form-image {
   background-image: asset-url("hostform.png");
   background-position: center;
