--- a/app/assets/stylesheets/room_form.css.scss
+++ b/app/assets/stylesheets/room_form.css.scss
@@ -72,6 +72,10 @@
   margin-top: 10px;
 }
 
+.room-submit:hover {
+  cursor: pointer;
+}
+
 .room-form-image {
   background-image: asset-url("hostform.png");
   background-position: center;
