fix color of guest login

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -259,8 +259,8 @@
 
 .guest-login {
   margin-top: 15px;
-  background: lightblue;
-  border: 1px solid lightblue;
+  background: rgb(66, 131, 198);
+  border: 1px solid rgb(66, 131, 198);
 }
 
 .form-input:focus {
