fix map change location on resize bug

--- a/app/assets/stylesheets/reviews.css
+++ b/app/assets/stylesheets/reviews.css
@@ -53,14 +53,14 @@
 }
 
 .review-form textarea {
-  border: 1px solid #ccc;
+  border: 1px solid #8e8d8d;
   margin-left: 40px;
 }
 
 .review-submit {
   display: block;
   margin-left: 40px;
-  background: lightskyblue;
+  background: rgb(34, 140, 186);
   color: white;
   padding: 10px;
 }
