--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -59,8 +59,6 @@
 .explore-world {
   height: 60%;
   padding-top: 30px;
-
-
 }
 
 .explore-box {
@@ -81,7 +79,13 @@
   bottom: 15px;
   left: 15px;
   color: white;
+  text-shadow: 0px 0px 5px black;
 }
+
+.card:hover {
+  box-shadow: 0px 0px 10px black;
+}
+
 
 .explore-items {
   height: 100%;
