--- a/app/assets/stylesheets/spot_detail.css
+++ b/app/assets/stylesheets/spot_detail.css
@@ -113,6 +113,11 @@
   margin-top: 20px;
 }
 
+.book-button:hover {
+  cursor: pointer;
+  background: rgb(255, 43, 50);
+}
+
 .booking-form {
   width: 100%;
   display: flex;
