--- a/app/assets/stylesheets/spot_detail.css
+++ b/app/assets/stylesheets/spot_detail.css
@@ -29,7 +29,9 @@
 .spot-host-info {
   width: 20%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .spot-main-info {
@@ -188,4 +190,11 @@
 .spot-section-header li {
   color: rgb(76, 76, 76);
   font-size: 13px;
+}
+
+.host-pic {
+  width: 100px;
+  height: 100px;
+  border: 1px solid #ccc;
+  border-radius: 50%;
 }
